objects/Cont_Code_Service_Endpoint_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCheck__c</fullName>
        <label>HealthCheck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Endpoint__c</fullName>
        <label>Release Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserv_Endpoint__c</fullName>
        <label>Reserv Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cont Code Service Endpoint Setting</label>
    <pluralLabel>Cont Code Service Endpoint Settings</pluralLabel>
</CustomObject>